; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ice/extr_ice_main.c_ice_clear_interrupt_scheme.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ice/extr_ice_main.c_ice_clear_interrupt_scheme.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ice_pf = type { i32*, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ice_pf*)* @ice_clear_interrupt_scheme to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ice_clear_interrupt_scheme(%struct.ice_pf* %0) #0 {
  %2 = alloca %struct.ice_pf*, align 8
  store %struct.ice_pf* %0, %struct.ice_pf** %2, align 8
  %3 = load %struct.ice_pf*, %struct.ice_pf** %2, align 8
  %4 = call i32 @ice_dis_msix(%struct.ice_pf* %3)
  %5 = load %struct.ice_pf*, %struct.ice_pf** %2, align 8
  %6 = getelementptr inbounds %struct.ice_pf, %struct.ice_pf* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %20

9:                                                ; preds = %1
  %10 = load %struct.ice_pf*, %struct.ice_pf** %2, align 8
  %11 = getelementptr inbounds %struct.ice_pf, %struct.ice_pf* %10, i32 0, i32 1
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load %struct.ice_pf*, %struct.ice_pf** %2, align 8
  %15 = getelementptr inbounds %struct.ice_pf, %struct.ice_pf* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = call i32 @devm_kfree(i32* %13, i32* %16)
  %18 = load %struct.ice_pf*, %struct.ice_pf** %2, align 8
  %19 = getelementptr inbounds %struct.ice_pf, %struct.ice_pf* %18, i32 0, i32 0
  store i32* null, i32** %19, align 8
  br label %20

20:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @ice_dis_msix(%struct.ice_pf*) #1

declare dso_local i32 @devm_kfree(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
